# MLexploration

./: README.md
agent_playground/disease-target-search/: README.md  pyproject.toml  run_disease_intel.py
agent_playground/disease-target-search/docs/: DESIGN.md  ISSUES.md  learning_notes.md  spec.md
agent_playground/disease-target-search/scripts/: explore_ontology.py  explore_registry.py  explore_skills.py  explore_targets.py  get_full_text.py  mine_review.py  search_pubmed.py  search_semantic_scholar.py  summarize_paper.py
agent_playground/disease-target-search/targetsearch/: DESIGN.md  __init__.py
agent_playground/disease-target-search/targetsearch/agents/: base.py  disease_intel.py  feedback.py  searcher.py
agent_playground/disease-target-search/targetsearch/core/: config.py  context.py  llm.py  logging.py  registry.py  skills.py
agent_playground/disease-target-search/targetsearch/schemas/: disease.py  evaluation.py  paper.py  target.py
agent_playground/disease-target-search/testrun-evaluation/: analyze_output_quality.py  analyze_prompt_quality.py  analyze_timing.py  analyze_token_usage.py  implementation-plan.md  learnings.md  parse_llm_logs.py  report-v3.md
agent_playground/disease-target-search/tests/: test_agent_tools.py  test_base_agent.py  test_context.py  test_coordination_tools.py  test_fulltext.py  test_ncbi_retry.py  test_paper_schemas.py  test_paper_tools.py  test_pipeline.py  test_prompt_tools.py  test_registry.py  test_schemas.py  test_skills.py  test_synthesis_tools.py  test_tools_literature.py  test_triage_tools.py
(+20 files in other folders)
